--- a/sass/composants/_header.scss
+++ b/sass/composants/_header.scss
@@ -8,8 +8,8 @@
     &__img{
         width: 200px;
         
-        @media (max-width : 768px){
-            width: 200px;
+        @media (max-width : $mobile){
+            
         }
     }
 
