--- a/sass/pages/_menu.scss
+++ b/sass/pages/_menu.scss
@@ -29,8 +29,12 @@
             flex-direction: column;
             align-items: center;
             border: 2px solid red;
-
         }
+
+        /*@media (max-width : $tablette) and (min-width : 768px) {
+            flex-direction: column;
+            align-items: center;
+        }*/
 
         &-titre
         {
@@ -40,10 +44,6 @@
             padding: 10px 25px 10px 25px;
             width: 100%;
             align-items: center;
-
-            @media (max-width : $mobile) {
-                
-            }
 
             &>.fa-regular
             {
@@ -62,7 +62,19 @@
             @media (max-width: $mobile) {
                 margin: 0;
                 padding: 0;
+                width: 100%;
                 flex-direction: column;
+            }
+
+            @media (max-width : $tablette) and (min-width : 768px){
+                margin: 0;
+                padding: 0;
+                flex-direction: column;
+            }
+
+            @media (min-width : 993px) and (max-width : 1215px) {
+                flex-wrap: wrap;
+                justify-content: center;
             }
 
             &-box
@@ -71,6 +83,11 @@
                 width: 100%;
                 height: 100%;
                 padding: 20px;
+
+                @media (min-width : 993px) and (max-width : 1215px) {
+                    width: 80%;
+                }
+
 
                 &>h3
                 {
@@ -101,7 +118,7 @@
 
                     &-titre-desc
                     {
-                        width: 100%;
+                        width: 85%;
                         margin: 0;
                         padding: 15px;
                         /* haut | droit | bas | gauche */
@@ -177,11 +194,19 @@
 
         &-btn
         {
-            width: 15%;
+            width: 20%;
             margin-bottom: 50px;
             @include btn;
 
             @media (max-width: $mobile) {
+                width: 50%;
+            }
+
+            @media (max-width : $tablette) and (min-width : 768px){
+                width: 50%;
+            }
+
+            @media (max-width : 1215px) and (min-width : 993px){
                 width: 50%;
             }
 
