--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -10,4 +10,5 @@ $color-tertiary : #99E2D0 ;
 $bg-color : rgb(241, 241, 241);
 $bg-footer : rgb(53,53,53);
 
-$mobile : 768px;
+$mobile : 767px;
+$tablette : 992px;
